--- a/mechpy/core/static/app/core/views/pessoa-list.html
+++ b/mechpy/core/static/app/core/views/pessoa-list.html
@@ -6,7 +6,7 @@
       Novo
     </a>
   </div>
-  <table class="table-max">
+  <table class="max-table">
     <thead>
       <tr>
         <th>Id</th>
