--- a/mechpy/core/static/css/app.css
+++ b/mechpy/core/static/css/app.css
@@ -3,9 +3,17 @@
     overflow-x: auto;
     display: block;
   }
+  .responsive-table thead{
+    display: none;
+  }
+  .responsive-table tbody, .responsive-table tbody tr, .responsive-table tbody tr td {
+    display: block;
+    float: left;
+    width: 100%;
+  }
 }
 @media screen and (min-width: 640px) {
-  .table-max{
+  .max-table , .responsive-table{
     width: 100% !important;
   }
 }
