Atualizando o botão voltar para zerar o id na hora da listagem

--- a/mechpy/core/static/app/core/views/pessoa.html
+++ b/mechpy/core/static/app/core/views/pessoa.html
@@ -6,7 +6,7 @@
       <i class="fa fa-floppy-o" aria-hidden="true"></i>
       Salvar
     </button>
-    <a ui-sref="dinamico({'modulo':'core', 'nome':'pessoa-list'})" class="button primary tiny right">
+    <a ui-sref="dinamico({'modulo':'core', 'nome':'pessoa-list', 'id':null})" class="button primary tiny right">
       <i class="fa fa-times" aria-hidden="true"></i>
       Voltar
     </a>
