Atualizando o form de login

--- a/mechpy/core/static/app/conta/views/login-form.html
+++ b/mechpy/core/static/app/conta/views/login-form.html
@@ -16,7 +16,7 @@
     </div>
     <div class="row">
       <div class="large columns">
-        <input type="submit" class="expand button" value="Log In"/>
+        <input type="submit" class="expand button" value="Entrar"/>
       </div>
     </div>
   </form>
