--- a/mechpy/core/static/app/core/views/pessoa-list.html
+++ b/mechpy/core/static/app/core/views/pessoa-list.html
@@ -33,5 +33,20 @@
         </td>
       </tr>
     </tbody>
+    <tfoot>
+      <tr>
+        <td colspan="7">
+          Mostrando {{ current }} do total {{ count }} registro(s)
+          <div class="right">
+          <a class="button tiny">
+            Anterior
+          </a>
+          <a class="button tiny">
+            Próximo
+          </a>
+          </div>
+        </td>
+      </tr>
+    </tfoot>
   </table>
 </div>
