Criando primeiro componente com transclude, falta passa a lógica para o componente mp-table e trocar o table normal por ele

--- a/mechpy/core/templates/index.html
+++ b/mechpy/core/templates/index.html
@@ -35,5 +35,6 @@
       <script src="{% static 'app/core/app.js' %}"></script>
       <script src="{% static 'app/core/app-service.js' %}"></script>
       <script src="{% static 'app/core/app-controller.js' %}"></script>
+      <script src="{% static 'app/core/components/mp-table.js' %}"></script>
   </body>
 </html>
