--- a/mechpy/core/static/app/core/views/pessoa-list.html
+++ b/mechpy/core/static/app/core/views/pessoa-list.html
@@ -6,6 +6,9 @@
       Novo
     </a>
   </div>
+  <mp-table>
+    <p>O que vai aparecer</p>
+  </mp-table>
   <table class="max-table">
     <thead>
       <tr>
