--- a/mechpy/core/static/app/core/views/pessoa-list.html
+++ b/mechpy/core/static/app/core/views/pessoa-list.html
@@ -6,8 +6,7 @@
       Novo
     </a>
   </div>
-  <mp-table>
-    <p>O que vai aparecer</p>
+  <mp-table headers="headers" service="pessoaService" metadata="metadata" >
   </mp-table>
   <table class="max-table">
     <thead>
