Solving the safe problem to table component

--- a/mechpy/core/static/app/core/components/views/mp-table.html
+++ b/mechpy/core/static/app/core/components/views/mp-table.html
@@ -10,6 +10,8 @@
         <tr ng-repeat="dado in dados">
             <td ng-repeat="metadado in metadata" {{ metadado.attr }}>
                 {{ !metadado.html ? dado[metadado.modelo] : '' }}
+                <div ng-if="metadado.html" ng-bind-html="metadado.html(dado)|safe">
+                </div>
             </td>
         </tr>
     </tbody>
